deploy: fbc64742dc60677101ba9afbaf0e7d308a385de9

--- a/_api/spei.dist.html
+++ b/_api/spei.dist.html
@@ -126,7 +126,7 @@ distribution of test statistic</p>
 </dd>
 </dl>
 <p class="rubric">References</p>
-<p>Onnen, H.: Intro to ProbabilityDistributions and Distribution
+<p>Onnen, H.: Intro to Probability Distributions and Distribution
 Fitting with Pythons  SciPy, 2021.</p>
 </dd></dl>
 
