--- a/examples/example04_package_comparison.html
+++ b/examples/example04_package_comparison.html
@@ -376,7 +376,7 @@ Freq: ME, Length: 789, dtype: float64
   warnings.warn(
 /home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable &#34;LD_LIBRARY_PATH&#34; redefined by R and overriding existing variable. Current: &#34;/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib&#34;, R: &#34;/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib&#34;
   warnings.warn(
-/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable &#34;R_SESSION_TMPDIR&#34; redefined by R and overriding existing variable. Current: &#34;/tmp/Rtmpmx0iPB&#34;, R: &#34;/tmp/RtmpTlWSb0&#34;
+/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable &#34;R_SESSION_TMPDIR&#34; redefined by R and overriding existing variable. Current: &#34;/tmp/RtmpifLU0D&#34;, R: &#34;/tmp/Rtmp38uu5N&#34;
   warnings.warn(
 </pre></div></div>
 </div>
