deploy: 388ce775ddf6e546fa88bbd863e3522a979c3faa

--- a/_api/modules.html
+++ b/_api/modules.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="spei package" href="spei.html" />
-    <link rel="prev" title="Rainfall Anomaly Index" href="../examples/example08_rai.html" />
+    <link rel="prev" title="Article for Journal of Open Source Software" href="../examples/example09_joss_paper.html" />
    
   <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
   
@@ -85,7 +85,7 @@
 <h3>Related Topics</h3>
 <ul>
   <li><a href="../index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="../examples/example08_rai.html" title="previous chapter">Rainfall Anomaly Index</a></li>
+      <li>Previous: <a href="../examples/example09_joss_paper.html" title="previous chapter">Article for Journal of Open Source Software</a></li>
       <li>Next: <a href="spei.html" title="next chapter">spei package</a></li>
   </ul></li>
 </ul>
